# iml_project

./: .gitignore  README.md  XG_preprocessed_data.csv  main.py  pyproject.toml
notebook/: data_exploration.py  data_exploration_Y.ipynb  exploration.ipynb
notebook/XGboost/: XGboost_exploration.ipynb
results/: SVM_cross_validation.pkl  SVM_error_analysis.csv  SVM_submission.csv.pkl  SVM_submission.csv_submission.csv  SVM_train_processed.csv.pkl  SVM_train_processed.csv_submission.csv  XG_submission.csv_submission.csv  XG_train_processed.csv_submission.csv  logistic_baseline.pkl  logistic_baseline_label_encoding_preprocess.pkl  logistic_baseline_label_encoding_preprocess_submission.csv  logistic_baseline_no_pdays_processed.pkl  logistic_baseline_no_pdays_processed_submission.csv  logistic_baseline_submission.csv  logistic_baseline_submission.csv.pkl  logistic_baseline_submission.csv_submission.csv  submission.csv  voting_submission.csv  voting_train_processed.csv_submission.csv  xgboost_error_analysis.csv
src/: Kfold.py  KfoldTraininer.py  ModelPredictor.py  ModelTrainer.py  __init__.py  error_analyze.py  model_configs.py  paired_ttest.py  predict.py  preprocess.py  train.py  utils.py
